--- a/components/Background/BG.module.css
+++ b/components/Background/BG.module.css
@@ -1,10 +1,11 @@
 .container {
+  position: absolute;
   height: 100%;
   width: 100%;
-  position: absolute;
-  z-index: -10;
+  z-index: -20;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   overflow: hidden;
+  /*  */
 }
 
 #stars {
